# llm-lexi-sort

./: pyproject.toml
src/: README.md  data_exporter.py  llm_manager.py  main.py  output.csv  taxonomy_manager.py  word_reader.py  words.csv
